--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+CoffeeScript==1.0.5
 Django==1.5.2
+Flask==0.9
+Jinja2==2.6
+PyExecJS==1.0.4
 South==0.8.2
+Werkzeug==0.8.3
 distribute==0.6.34
 dj-database-url==0.2.2
 dj-static==0.0.5
@@ -8,9 +13,14 @@ django-toolbelt==0.0.1
 docutils==0.11
 gunicorn==17.5
 ipython==1.0.0
+numpy==1.7.0
+pandas==0.10.1
+psycopg2==2.5.1
+pyodbc==3.0.6
 pyreadline==2.0
 python-dateutil==2.1
 pytz==2013b
+scipy==0.11.0
 six==1.3.0
 static==0.4
 wsgiref==0.1.2
