--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ psycopg2==2.5.1
 pyreadline==2.0
 python-dateutil==2.1
 pytz==2013b
+redis==2.8.0
+rq==0.3.11
 six==1.3.0
 static==0.4
+times==0.6.2
 wsgiref==0.1.2
