--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@ distribute==0.6.34
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-admin-bootstrapped==0.4.2
+django-rq==0.5.1
 django-toolbelt==0.0.1
 docutils==0.11
 gunicorn==17.5
 ipython==1.0.0
-numpy==1.7.0
+numpy==1.7.1
 pandas==0.10.1
 psycopg2==2.5.1
 pyreadline==2.0
