--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5.2
+HireFire==0.1
 South==0.8.2
 distribute==0.6.34
 dj-database-url==0.2.2
@@ -9,6 +10,7 @@ django-toolbelt==0.0.1
 docutils==0.11
 gunicorn==17.5
 ipython==1.0.0
+newrelic==2.0.0.1
 numpy==1.7.1
 pandas==0.10.1
 psycopg2==2.5.1
