--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gunicorn==17.5
 ipython==1.0.0
 newrelic==2.0.0.1
 numpy==1.7.1
+pandas==0.10.1
 psycopg2==2.5.1
 pyreadline==2.0
 python-dateutil==2.1
