--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 Django==1.5.2
 HireFire==0.1
 South==0.8.2
+boto==2.13.3
 distribute==0.6.34
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-admin-bootstrapped==0.4.2
 django-rq==0.5.1
+django-storages==1.1.8
 django-toolbelt==0.0.1
 docutils==0.11
 gunicorn==17.5
