--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distribute==0.6.34
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-admin-bootstrapped==0.4.2
+django-pagination-bootstrap==1.0.5
 django-rq==0.5.1
 django-storages==1.1.8
 django-toolbelt==0.0.1
